# sober-reasoning

./: lighteval_tasks.py  main.py  pyproject.toml  run.sh  test_run.sh  test_run_sbatch.sh
scripts/: inspect_results.py
